// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CocktailCard matches snapshot 1`] = `
<article
  aria-labelledby="drink-11000-title"
  class="card drink-card"
>
  <header
    class="lyrics-header"
  >
    <h2
      id="drink-11000-title"
    >
      Mojito
    </h2>
  </header>
  <p
    class="meta"
  >
    <strong>
      Alcohol:
    </strong>
     
    Alcoholic
     ·
     
    <strong>
      Glass:
    </strong>
     
    Highball glass
  </p>
  <div
    class="media"
  >
    <img
      alt="Mojito"
      class="thumb"
      decoding="async"
      height="160"
      loading="lazy"
      src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg"
      width="160"
    />
    <div>
      <h3
        class="sr-only"
      >
        Ingredients
      </h3>
      <table
        aria-label="Ingredients"
        class="nutrition"
      >
        <tbody>
          <tr>
            <th
              scope="row"
            />
            <td>
              2-3 oz
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              Juice of 1
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              2 tsp
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              2-4
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="instructions"
      >
        <strong>
          Instructions:
        </strong>
         
        Muddle mint leaves with sugar and lime juice. Add a splash of soda water and fill the glass with cracked ice.
      </p>
    </div>
  </div>
</article>
`;

exports[`CocktailCard with minimal data matches snapshot 1`] = `
<article
  aria-labelledby="drink-11000-title"
  class="card drink-card"
>
  <header
    class="lyrics-header"
  >
    <h2
      id="drink-11000-title"
    >
      Mojito
    </h2>
  </header>
  <p
    class="meta"
  >
    <strong>
      Alcohol:
    </strong>
     
    –
     ·
     
    <strong>
      Glass:
    </strong>
     
    –
  </p>
  <div
    class="media"
  >
    <img
      alt="Mojito"
      class="thumb"
      decoding="async"
      height="160"
      loading="lazy"
      src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg"
      width="160"
    />
    <div>
      <h3
        class="sr-only"
      >
        Ingredients
      </h3>
      <table
        aria-label="Ingredients"
        class="nutrition"
      >
        <tbody>
          <tr>
            <th
              scope="row"
            />
            <td>
              2-3 oz
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              Juice of 1
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              2 tsp
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            />
            <td>
              2-4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</article>
`;
